Installed the firebase dependecies. But not yet finished.

--- a/midterm/app.json
+++ b/midterm/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "midterm",
     "slug": "midterm",
+    "plugins": ["@react-native-google-signin/google-signin"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,10 +22,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "googleServicesFile": "./google-services.json",
+      "package": "com.kokoylomeda.midterm"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "777365f0-c166-4cf2-9761-926bc400b71e"
+      }
     }
   }
 }
