--- a/midterm/package.json
+++ b/midterm/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.12",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
+    "expo-dev-client": "~2.1.6",
     "expo-status-bar": "~1.4.4",
     "navigation": "^6.1.0",
     "react": "18.2.0",
